# Hi3516CV500_SDK_V2.0.2.0_MPP_Sample

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  sample_comm_audio.c  sample_comm_vo.c  sample_vio.c  sample_vio_main.c
src/lvgl/lv_drivers/display/: fbdev.c
